8268773: Improvements related to: Failed to start thread - pthread_create failed (EAGAIN)